# merge_files_for_globus

./: .gitignore  Makefile.am  README.md  configure.ac  environment.yaml  merge_files_for_globus-1.0.0.pc.in  merge_files_for_globus.doxyfile
finter/finter/: finter.h  finter_reader_bzip2.cc  finter_reader_bzip2.h  finter_reader_flat.cc  finter_reader_flat.h  finter_reader_gzip.cc  finter_reader_gzip.h  finter_reader_parent.h  finter_writer_bzip2.cc  finter_writer_bzip2.h  finter_writer_flat.cc  finter_writer_flat.h  finter_writer_gzip.cc  finter_writer_gzip.h  finter_writer_parent.h  helper.h
merge_files_for_globus/: main.cc
